# triangle_intersection

./: CMakeLists.txt  NOTICE  README.md  base3d.cpp  base3d.h  geometry_io.h  intersection_algorithms.cpp  intersection_algorithms.h  main.cpp  segment3d.cpp  vector3d.h
.github/workflows/: build_and_test.yml
examples/: input1.txt  input2.txt  input3.txt
src/: CMakeLists.txt  geometry_io.cpp  global_constants.h  main.cpp  point3d.cpp  point3d.h  segment3d.h  triangle3d.cpp  triangle3d.h  vector3d.cpp
tests/: CMakeLists.txt  test_algorithms.cpp  test_geometry.cpp  test_io.cpp
